Luka, Preethi | #82 | Added 'smoke' profile to run functional tests