@@ -193,6 +193,26 @@
                     <stopKey>secret</stopKey>
                     <stopPort>6667</stopPort>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>start-jetty</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <daemon>true</daemon>
+                            <skip>${skipTests}</skip>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-jetty</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>stop</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
             <!--RELEASE-->
             <plugin>
@@ -238,4 +258,48 @@
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>smoke</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>2.9</version>
+                        <executions>
+                            <execution>
+                                <id>smoke</id>
+                                <goals>
+                                    <goal>integration-test</goal>
+                                    <goal>verify</goal>
+                                </goals>
+                                <configuration>
+                                    <argLine>-XX:MaxPermSize=256M</argLine>
+                                    <systemProperties>
+                                        <property>
+                                            <name>jetty.port</name>
+                                            <value>${jetty.port}</value>
+                                        </property>
+                                        <property>
+                                            <name>test.driver</name>
+                                            <value>${test.driver}</value>
+                                        </property>
+                                    </systemProperties>
+                                    <runOrder>reversealphabetical</runOrder>
+                                    <parallel>classes</parallel>
+                                    <threadCount>4</threadCount>
+                                    <perCoreThreadCount>false</perCoreThreadCount>
+                                    <includes>
+                                        <include>**/functional/**/*.java</include>
+                                    </includes>
+                                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
